# HungerCues

./: Architecture.md  README.md  docker-compose.yml  firebase.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
Baby-Tracker-main/: .env.example  .firebaserc  .gitignore  README.md  firestore.indexes.json  firestore.rules  package.json
Baby-Tracker-main/apps/backend/: .env.example  README.md  alembic.ini
Baby-Tracker-main/apps/web/: README.md
Baby-Tracker-main/docs/: architecture.md  product-roadmap.md
Baby-Tracker-main/functions/: .eslintrc.js  package-lock.json  package.json
apps/backend/: Dockerfile  README.md  baby_tracker.db  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 443e3ca5b076_create_milestones_table.py
apps/backend/app/: config.py  database.py  main.py
apps/backend/app/dependencies/: auth.py
apps/backend/app/jobs/: notification_scheduler.py
apps/backend/app/models/: __init__.py  baby.py  feeding.py  growth.py  milestone.py  sleep.py
apps/backend/app/routers/v1/: __init__.py  ai.py  auth.py  babies.py  feedings.py  growth.py  milestones.py  notifications.py  sleep.py
apps/backend/app/services/ai/: README.md  __init__.py  client.py  schemas.py  service.py
apps/backend/tests/: test_feedings.py  test_growth.py  test_milestones.py  test_scheduler.py
apps/mobile-app/: App.tsx  app.json  package-lock.json  package.json
apps/mobile-app/src/: api.ts  env.d.ts
docs/: api.md  product-roadmap.md  project-specification.md  security.md
functions/src/: index.ts
(+39 files in other folders)
